--- a/app/templates/tournaments/detail.html
+++ b/app/templates/tournaments/detail.html
@@ -61,6 +61,7 @@
       <a href="{{ url_for('tournaments.edit', tournament_id=tournament.id) }}">Edit tournament</a>
     </p>
     <form method="post" action="{{ url_for('tournaments.delete', tournament_id=tournament.id) }}" style="margin-top: 0.5rem;">
+      <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
       <button type="submit" onclick="return confirm('Are you sure you want to delete this tournament?');">
         Delete tournament
       </button>
